parser.output
Grammar

    0 $accept: program $end

    1 program: PROSTABONA global_items UPOSHONGHAR

    2 global_items: /* empty */
    3             | global_items global_item

    4 global_item: statement
    5            | function_definition

    6 function_definition: DRISSHO IDENTIFIER LPAREN parameter_list_opt RPAREN block

    7 parameter_list_opt: /* empty */
    8                   | parameter_list

    9 parameter_list: IDENTIFIER
   10               | parameter_list COMMA IDENTIFIER

   11 block: SHURU statement_list SHESH

   12 statement_list: /* empty */
   13               | statement_list statement

   14 statement: declaration SEMICOLON
   15          | assignment SEMICOLON
   16          | print_stmt SEMICOLON
   17          | input_stmt SEMICOLON
   18          | function_call SEMICOLON
   19          | return_stmt SEMICOLON
   20          | if_stmt
   21          | loop_stmt
   22          | block

   23 declaration: SHONKHYA numeric_declarator_list
   24            | PURNOSHONKHYA numeric_declarator_list
   25            | BAKKYO string_declarator_list
   26            | OKKHYOR char_declarator_list

   27 numeric_declarator_list: numeric_declarator
   28                        | numeric_declarator_list COMMA numeric_declarator

   29 numeric_declarator: IDENTIFIER
   30                   | IDENTIFIER ASSIGN expression

   31 string_declarator_list: string_declarator
   32                       | string_declarator_list COMMA string_declarator

   33 string_declarator: IDENTIFIER
   34                  | IDENTIFIER ASSIGN STRING_LITERAL

   35 char_declarator_list: char_declarator
   36                     | char_declarator_list COMMA char_declarator

   37 char_declarator: IDENTIFIER
   38                | IDENTIFIER ASSIGN CHAR_LITERAL

   39 assignment: IDENTIFIER ASSIGN expression
   40           | IDENTIFIER ASSIGN STRING_LITERAL
   41           | IDENTIFIER ASSIGN CHAR_LITERAL

   42 print_stmt: SHOBDO printable

   43 printable: expression
   44          | STRING_LITERAL
   45          | CHAR_LITERAL

   46 input_stmt: JOBDO IDENTIFIER

   47 return_stmt: PHEROT expression
   48            | PHEROT STRING_LITERAL
   49            | PHEROT CHAR_LITERAL

   50 if_stmt: JODI LPAREN condition RPAREN statement
   51        | JODI LPAREN condition RPAREN statement ONNOTHA statement

   52 loop_stmt: CHOKRO LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN statement

   53 function_call: IDENTIFIER LPAREN argument_list_opt RPAREN

   54 argument_list_opt: /* empty */
   55                  | argument_list

   56 argument_list: argument
   57              | argument_list COMMA argument

   58 argument: expression
   59         | STRING_LITERAL
   60         | CHAR_LITERAL

   61 condition: expression GT expression
   62          | expression LT expression
   63          | expression GEQ expression
   64          | expression LEQ expression
   65          | expression EQ expression
   66          | expression NEQ expression

   67 expression: expression PLUS expression
   68           | expression MINUS expression
   69           | expression MULT expression
   70           | expression DIV expression
   71           | expression MOD expression
   72           | MINUS expression
   73           | LPAREN expression RPAREN
   74           | SHAKTI LPAREN expression COMMA expression RPAREN
   75           | BORGOMUL LPAREN expression RPAREN
   76           | function_call
   77           | INT_LITERAL
   78           | FLOAT_LITERAL
   79           | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 77
FLOAT_LITERAL (259) 78
CHAR_LITERAL (260) 38 41 45 49 60
STRING_LITERAL (261) 34 40 44 48 59
IDENTIFIER (262) 6 9 10 29 30 33 34 37 38 39 40 41 46 53 79
PROSTABONA (263) 1
UPOSHONGHAR (264) 1
DRISSHO (265) 6
SHURU (266) 11
SHESH (267) 11
SHONKHYA (268) 23
PURNOSHONKHYA (269) 24
BAKKYO (270) 25
OKKHYOR (271) 26
SHOBDO (272) 42
JOBDO (273) 46
JODI (274) 50 51
ONNOTHA (275) 51
CHOKRO (276) 52
SHAKTI (277) 74
BORGOMUL (278) 75
PHEROT (279) 47 48 49
ASSIGN (280) 30 34 38 39 40 41
PLUS (281) 67
MINUS (282) 68 72
MULT (283) 69
DIV (284) 70
MOD (285) 71
GT (286) 61
LT (287) 62
GEQ (288) 63
LEQ (289) 64
EQ (290) 65
NEQ (291) 66
SEMICOLON (292) 14 15 16 17 18 19 52
COMMA (293) 10 28 32 36 57 74
LPAREN (294) 6 50 51 52 53 73 74 75
RPAREN (295) 6 50 51 52 53 73 74 75
LOWER_THAN_ELSE (296)
UMINUS (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
global_items (45)
    on left: 2 3, on right: 1 3
global_item (46)
    on left: 4 5, on right: 3
function_definition (47)
    on left: 6, on right: 5
parameter_list_opt (48)
    on left: 7 8, on right: 6
parameter_list (49)
    on left: 9 10, on right: 8 10
block (50)
    on left: 11, on right: 6 22
statement_list (51)
    on left: 12 13, on right: 11 13
statement (52)
    on left: 14 15 16 17 18 19 20 21 22, on right: 4 13 50 51 52
declaration (53)
    on left: 23 24 25 26, on right: 14
numeric_declarator_list (54)
    on left: 27 28, on right: 23 24 28
numeric_declarator (55)
    on left: 29 30, on right: 27 28
string_declarator_list (56)
    on left: 31 32, on right: 25 32
string_declarator (57)
    on left: 33 34, on right: 31 32
char_declarator_list (58)
    on left: 35 36, on right: 26 36
char_declarator (59)
    on left: 37 38, on right: 35 36
assignment (60)
    on left: 39 40 41, on right: 15 52
print_stmt (61)
    on left: 42, on right: 16
printable (62)
    on left: 43 44 45, on right: 42
input_stmt (63)
    on left: 46, on right: 17
return_stmt (64)
    on left: 47 48 49, on right: 19
if_stmt (65)
    on left: 50 51, on right: 20
loop_stmt (66)
    on left: 52, on right: 21
function_call (67)
    on left: 53, on right: 18 76
argument_list_opt (68)
    on left: 54 55, on right: 53
argument_list (69)
    on left: 56 57, on right: 55 57
argument (70)
    on left: 58 59 60, on right: 56 57
condition (71)
    on left: 61 62 63 64 65 66, on right: 50 51 52
expression (72)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79, on right: 30 39
    43 47 58 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75


State 0

    0 $accept: . program $end

    PROSTABONA  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROSTABONA . global_items UPOSHONGHAR

    $default  reduce using rule 2 (global_items)

    global_items  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROSTABONA global_items . UPOSHONGHAR
    3 global_items: global_items . global_item

    IDENTIFIER     shift, and go to state 5
    UPOSHONGHAR    shift, and go to state 6
    DRISSHO        shift, and go to state 7
    SHURU          shift, and go to state 8
    SHONKHYA       shift, and go to state 9
    PURNOSHONKHYA  shift, and go to state 10
    BAKKYO         shift, and go to state 11
    OKKHYOR        shift, and go to state 12
    SHOBDO         shift, and go to state 13
    JOBDO          shift, and go to state 14
    JODI           shift, and go to state 15
    CHOKRO         shift, and go to state 16
    PHEROT         shift, and go to state 17

    global_item          go to state 18
    function_definition  go to state 19
    block                go to state 20
    statement            go to state 21
    declaration          go to state 22
    assignment           go to state 23
    print_stmt           go to state 24
    input_stmt           go to state 25
    return_stmt          go to state 26
    if_stmt              go to state 27
    loop_stmt            go to state 28
    function_call        go to state 29


State 4

    0 $accept: program $end .

    $default  accept


State 5

   39 assignment: IDENTIFIER . ASSIGN expression
   40           | IDENTIFIER . ASSIGN STRING_LITERAL
   41           | IDENTIFIER . ASSIGN CHAR_LITERAL
   53 function_call: IDENTIFIER . LPAREN argument_list_opt RPAREN

    ASSIGN  shift, and go to state 30
    LPAREN  shift, and go to state 31


State 6

    1 program: PROSTABONA global_items UPOSHONGHAR .

    $default  reduce using rule 1 (program)


State 7

    6 function_definition: DRISSHO . IDENTIFIER LPAREN parameter_list_opt RPAREN block

    IDENTIFIER  shift, and go to state 32


State 8

   11 block: SHURU . statement_list SHESH

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 33


State 9

   23 declaration: SHONKHYA . numeric_declarator_list

    IDENTIFIER  shift, and go to state 34

    numeric_declarator_list  go to state 35
    numeric_declarator       go to state 36


State 10

   24 declaration: PURNOSHONKHYA . numeric_declarator_list

    IDENTIFIER  shift, and go to state 34

    numeric_declarator_list  go to state 37
    numeric_declarator       go to state 36


State 11

   25 declaration: BAKKYO . string_declarator_list

    IDENTIFIER  shift, and go to state 38

    string_declarator_list  go to state 39
    string_declarator       go to state 40


State 12

   26 declaration: OKKHYOR . char_declarator_list

    IDENTIFIER  shift, and go to state 41

    char_declarator_list  go to state 42
    char_declarator       go to state 43


State 13

   42 print_stmt: SHOBDO . printable

    INT_LITERAL     shift, and go to state 44
    FLOAT_LITERAL   shift, and go to state 45
    CHAR_LITERAL    shift, and go to state 46
    STRING_LITERAL  shift, and go to state 47
    IDENTIFIER      shift, and go to state 48
    SHAKTI          shift, and go to state 49
    BORGOMUL        shift, and go to state 50
    MINUS           shift, and go to state 51
    LPAREN          shift, and go to state 52

    printable      go to state 53
    function_call  go to state 54
    expression     go to state 55


State 14

   46 input_stmt: JOBDO . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


State 15

   50 if_stmt: JODI . LPAREN condition RPAREN statement
   51        | JODI . LPAREN condition RPAREN statement ONNOTHA statement

    LPAREN  shift, and go to state 57


State 16

   52 loop_stmt: CHOKRO . LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN statement

    LPAREN  shift, and go to state 58


State 17

   47 return_stmt: PHEROT . expression
   48            | PHEROT . STRING_LITERAL
   49            | PHEROT . CHAR_LITERAL

    INT_LITERAL     shift, and go to state 44
    FLOAT_LITERAL   shift, and go to state 45
    CHAR_LITERAL    shift, and go to state 59
    STRING_LITERAL  shift, and go to state 60
    IDENTIFIER      shift, and go to state 48
    SHAKTI          shift, and go to state 49
    BORGOMUL        shift, and go to state 50
    MINUS           shift, and go to state 51
    LPAREN          shift, and go to state 52

    function_call  go to state 54
    expression     go to state 61


State 18

    3 global_items: global_items global_item .

    $default  reduce using rule 3 (global_items)


State 19

    5 global_item: function_definition .

    $default  reduce using rule 5 (global_item)


State 20

   22 statement: block .

    $default  reduce using rule 22 (statement)


State 21

    4 global_item: statement .

    $default  reduce using rule 4 (global_item)


State 22

   14 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 62


State 23

   15 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 24

   16 statement: print_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 25

   17 statement: input_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 65


State 26

   19 statement: return_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 27

   20 statement: if_stmt .

    $default  reduce using rule 20 (statement)


State 28

   21 statement: loop_stmt .

    $default  reduce using rule 21 (statement)


State 29

   18 statement: function_call . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 30

   39 assignment: IDENTIFIER ASSIGN . expression
   40           | IDENTIFIER ASSIGN . STRING_LITERAL
   41           | IDENTIFIER ASSIGN . CHAR_LITERAL

    INT_LITERAL     shift, and go to state 44
    FLOAT_LITERAL   shift, and go to state 45
    CHAR_LITERAL    shift, and go to state 68
    STRING_LITERAL  shift, and go to state 69
    IDENTIFIER      shift, and go to state 48
    SHAKTI          shift, and go to state 49
    BORGOMUL        shift, and go to state 50
    MINUS           shift, and go to state 51
    LPAREN          shift, and go to state 52

    function_call  go to state 54
    expression     go to state 70


State 31

   53 function_call: IDENTIFIER LPAREN . argument_list_opt RPAREN

    INT_LITERAL     shift, and go to state 44
    FLOAT_LITERAL   shift, and go to state 45
    CHAR_LITERAL    shift, and go to state 71
    STRING_LITERAL  shift, and go to state 72
    IDENTIFIER      shift, and go to state 48
    SHAKTI          shift, and go to state 49
    BORGOMUL        shift, and go to state 50
    MINUS           shift, and go to state 51
    LPAREN          shift, and go to state 52

    $default  reduce using rule 54 (argument_list_opt)

    function_call      go to state 54
    argument_list_opt  go to state 73
    argument_list      go to state 74
    argument           go to state 75
    expression         go to state 76


State 32

    6 function_definition: DRISSHO IDENTIFIER . LPAREN parameter_list_opt RPAREN block

    LPAREN  shift, and go to state 77


State 33

   11 block: SHURU statement_list . SHESH
   13 statement_list: statement_list . statement

    IDENTIFIER     shift, and go to state 5
    SHURU          shift, and go to state 8
    SHESH          shift, and go to state 78
    SHONKHYA       shift, and go to state 9
    PURNOSHONKHYA  shift, and go to state 10
    BAKKYO         shift, and go to state 11
    OKKHYOR        shift, and go to state 12
    SHOBDO         shift, and go to state 13
    JOBDO          shift, and go to state 14
    JODI           shift, and go to state 15
    CHOKRO         shift, and go to state 16
    PHEROT         shift, and go to state 17

    block          go to state 20
    statement      go to state 79
    declaration    go to state 22
    assignment     go to state 23
    print_stmt     go to state 24
    input_stmt     go to state 25
    return_stmt    go to state 26
    if_stmt        go to state 27
    loop_stmt      go to state 28
    function_call  go to state 29


State 34

   29 numeric_declarator: IDENTIFIER .
   30                   | IDENTIFIER . ASSIGN expression

    ASSIGN  shift, and go to state 80

    $default  reduce using rule 29 (numeric_declarator)


State 35

   23 declaration: SHONKHYA numeric_declarator_list .
   28 numeric_declarator_list: numeric_declarator_list . COMMA numeric_declarator

    COMMA  shift, and go to state 81

    $default  reduce using rule 23 (declaration)


State 36

   27 numeric_declarator_list: numeric_declarator .

    $default  reduce using rule 27 (numeric_declarator_list)


State 37

   24 declaration: PURNOSHONKHYA numeric_declarator_list .
   28 numeric_declarator_list: numeric_declarator_list . COMMA numeric_declarator

    COMMA  shift, and go to state 81

    $default  reduce using rule 24 (declaration)


State 38

   33 string_declarator: IDENTIFIER .
   34                  | IDENTIFIER . ASSIGN STRING_LITERAL

    ASSIGN  shift, and go to state 82

    $default  reduce using rule 33 (string_declarator)


State 39

   25 declaration: BAKKYO string_declarator_list .
   32 string_declarator_list: string_declarator_list . COMMA string_declarator

    COMMA  shift, and go to state 83

    $default  reduce using rule 25 (declaration)


State 40

   31 string_declarator_list: string_declarator .

    $default  reduce using rule 31 (string_declarator_list)


State 41

   37 char_declarator: IDENTIFIER .
   38                | IDENTIFIER . ASSIGN CHAR_LITERAL

    ASSIGN  shift, and go to state 84

    $default  reduce using rule 37 (char_declarator)


State 42

   26 declaration: OKKHYOR char_declarator_list .
   36 char_declarator_list: char_declarator_list . COMMA char_declarator

    COMMA  shift, and go to state 85

    $default  reduce using rule 26 (declaration)


State 43

   35 char_declarator_list: char_declarator .

    $default  reduce using rule 35 (char_declarator_list)


State 44

   77 expression: INT_LITERAL .

    $default  reduce using rule 77 (expression)


State 45

   78 expression: FLOAT_LITERAL .

    $default  reduce using rule 78 (expression)


State 46

   45 printable: CHAR_LITERAL .

    $default  reduce using rule 45 (printable)


State 47

   44 printable: STRING_LITERAL .

    $default  reduce using rule 44 (printable)


State 48

   53 function_call: IDENTIFIER . LPAREN argument_list_opt RPAREN
   79 expression: IDENTIFIER .

    LPAREN  shift, and go to state 31

    $default  reduce using rule 79 (expression)


State 49

   74 expression: SHAKTI . LPAREN expression COMMA expression RPAREN

    LPAREN  shift, and go to state 86


State 50

   75 expression: BORGOMUL . LPAREN expression RPAREN

    LPAREN  shift, and go to state 87


State 51

   72 expression: MINUS . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 88


State 52

   73 expression: LPAREN . expression RPAREN

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 89


State 53

   42 print_stmt: SHOBDO printable .

    $default  reduce using rule 42 (print_stmt)


State 54

   76 expression: function_call .

    $default  reduce using rule 76 (expression)


State 55

   43 printable: expression .
   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    MULT   shift, and go to state 92
    DIV    shift, and go to state 93
    MOD    shift, and go to state 94

    $default  reduce using rule 43 (printable)


State 56

   46 input_stmt: JOBDO IDENTIFIER .

    $default  reduce using rule 46 (input_stmt)


State 57

   50 if_stmt: JODI LPAREN . condition RPAREN statement
   51        | JODI LPAREN . condition RPAREN statement ONNOTHA statement

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    condition      go to state 95
    expression     go to state 96


State 58

   52 loop_stmt: CHOKRO LPAREN . assignment SEMICOLON condition SEMICOLON assignment RPAREN statement

    IDENTIFIER  shift, and go to state 97

    assignment  go to state 98


State 59

   49 return_stmt: PHEROT CHAR_LITERAL .

    $default  reduce using rule 49 (return_stmt)


State 60

   48 return_stmt: PHEROT STRING_LITERAL .

    $default  reduce using rule 48 (return_stmt)


State 61

   47 return_stmt: PHEROT expression .
   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    MULT   shift, and go to state 92
    DIV    shift, and go to state 93
    MOD    shift, and go to state 94

    $default  reduce using rule 47 (return_stmt)


State 62

   14 statement: declaration SEMICOLON .

    $default  reduce using rule 14 (statement)


State 63

   15 statement: assignment SEMICOLON .

    $default  reduce using rule 15 (statement)


State 64

   16 statement: print_stmt SEMICOLON .

    $default  reduce using rule 16 (statement)


State 65

   17 statement: input_stmt SEMICOLON .

    $default  reduce using rule 17 (statement)


State 66

   19 statement: return_stmt SEMICOLON .

    $default  reduce using rule 19 (statement)


State 67

   18 statement: function_call SEMICOLON .

    $default  reduce using rule 18 (statement)


State 68

   41 assignment: IDENTIFIER ASSIGN CHAR_LITERAL .

    $default  reduce using rule 41 (assignment)


State 69

   40 assignment: IDENTIFIER ASSIGN STRING_LITERAL .

    $default  reduce using rule 40 (assignment)


State 70

   39 assignment: IDENTIFIER ASSIGN expression .
   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    MULT   shift, and go to state 92
    DIV    shift, and go to state 93
    MOD    shift, and go to state 94

    $default  reduce using rule 39 (assignment)


State 71

   60 argument: CHAR_LITERAL .

    $default  reduce using rule 60 (argument)


State 72

   59 argument: STRING_LITERAL .

    $default  reduce using rule 59 (argument)


State 73

   53 function_call: IDENTIFIER LPAREN argument_list_opt . RPAREN

    RPAREN  shift, and go to state 99


State 74

   55 argument_list_opt: argument_list .
   57 argument_list: argument_list . COMMA argument

    COMMA  shift, and go to state 100

    $default  reduce using rule 55 (argument_list_opt)


State 75

   56 argument_list: argument .

    $default  reduce using rule 56 (argument_list)


State 76

   58 argument: expression .
   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    MULT   shift, and go to state 92
    DIV    shift, and go to state 93
    MOD    shift, and go to state 94

    $default  reduce using rule 58 (argument)


State 77

    6 function_definition: DRISSHO IDENTIFIER LPAREN . parameter_list_opt RPAREN block

    IDENTIFIER  shift, and go to state 101

    $default  reduce using rule 7 (parameter_list_opt)

    parameter_list_opt  go to state 102
    parameter_list      go to state 103


State 78

   11 block: SHURU statement_list SHESH .

    $default  reduce using rule 11 (block)


State 79

   13 statement_list: statement_list statement .

    $default  reduce using rule 13 (statement_list)


State 80

   30 numeric_declarator: IDENTIFIER ASSIGN . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 104


State 81

   28 numeric_declarator_list: numeric_declarator_list COMMA . numeric_declarator

    IDENTIFIER  shift, and go to state 34

    numeric_declarator  go to state 105


State 82

   34 string_declarator: IDENTIFIER ASSIGN . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 106


State 83

   32 string_declarator_list: string_declarator_list COMMA . string_declarator

    IDENTIFIER  shift, and go to state 38

    string_declarator  go to state 107


State 84

   38 char_declarator: IDENTIFIER ASSIGN . CHAR_LITERAL

    CHAR_LITERAL  shift, and go to state 108


State 85

   36 char_declarator_list: char_declarator_list COMMA . char_declarator

    IDENTIFIER  shift, and go to state 41

    char_declarator  go to state 109


State 86

   74 expression: SHAKTI LPAREN . expression COMMA expression RPAREN

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 110


State 87

   75 expression: BORGOMUL LPAREN . expression RPAREN

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 111


State 88

   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression
   72           | MINUS expression .

    $default  reduce using rule 72 (expression)


State 89

   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression
   73           | LPAREN expression . RPAREN

    PLUS    shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    DIV     shift, and go to state 93
    MOD     shift, and go to state 94
    RPAREN  shift, and go to state 112


State 90

   67 expression: expression PLUS . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 113


State 91

   68 expression: expression MINUS . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 114


State 92

   69 expression: expression MULT . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 115


State 93

   70 expression: expression DIV . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 116


State 94

   71 expression: expression MOD . expression

    INT_LITERAL    shift, and go to state 44
    FLOAT_LITERAL  shift, and go to state 45
    IDENTIFIER     shift, and go to state 48
    SHAKTI         shift, and go to state 49
    BORGOMUL       shift, and go to state 50
    MINUS          shift, and go to state 51
    LPAREN         shift, and go to state 52

    function_call  go to state 54
    expression     go to state 117


State 95

   50 if_stmt: JODI LPAREN condition . RPAREN statement
   51        | JODI LPAREN condition . RPAREN statement ONNOTHA statement

    RPAREN  shift, and go to state 118


State 96

   61 condition: expression . GT expression
   62          | expression . LT expression
   63          | expression . GEQ expression
   64          | expression . LEQ expression
   65          | expression . EQ expression
   66          | expression . NEQ expression
   67 expression: expression . PLUS expression
   68           | expression . MINUS expression
   69           | expression . MULT expression
   70           | expression . DIV expression
   71           | expression . MOD expression
